fixing video controls and issues on iphone

--- a/src/Styling/Footer.css
+++ b/src/Styling/Footer.css
@@ -30,6 +30,7 @@ footer{
     align-items: center;
     justify-content: center;
     z-index: 2;
+    flex: 1 1 0;
   }
   
   .footer-list li{
